Add sequenceNumber to signatures